service.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-svc
  namespace: assessment
spec:
  type: ClusterIP
  selector:
    app: devops-svc
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
