ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-svc
  namespace: assessment
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /DevOps
            pathType: Prefix
            backend:
              service:
                name: devops-svc
                port:
                  number: 8080
